# ORM_Alchemy

./: connection.py  create_table.py  drop_table.py  main.py  models.py  pyproject.toml  seed_data.py
alembic/: env.py
alembic/versions/: f0b53b64c7a7_initial_migration.py  f4a454683c2b_drop_tables.py
select_queries/: select_1.py  select_10.py  select_2.py  select_3.py  select_4.py  select_5.py  select_6.py  select_7.py  select_8.py  select_9.py
